--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -362,6 +362,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"D">
 <!ENTITY appMenuGettingStarted.label	"Začínáme">
 <!ENTITY goCmd.label					"Přejít">
+<!ENTITY Ctr_menu_restart.label			"Restart &brandShortName;">
+<!ENTITY Ctr_restartapp					"'Restart &brandShortName;' in appmenu and filemenu">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Z">
