--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -362,6 +362,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Erste Schritte">
 <!ENTITY goCmd.label					"Los">
+<!ENTITY Ctr_menu_restart.label			"&brandShortName; neustarten">
+<!ENTITY Ctr_restartapp					"'&brandShortName; neustarten' im '&brandShortName;'- und 'Datei'-Menü">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"Z">
