--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -362,6 +362,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"R">
 <!ENTITY appMenuGettingStarted.label	"Prědne kšace">
 <!ENTITY goCmd.label					"Start">
+<!ENTITY Ctr_menu_restart.label			"Restart &brandShortName;">
+<!ENTITY Ctr_restartapp					"'Restart &brandShortName;' in appmenu and filemenu">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"S">
