--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -56,10 +56,10 @@
 <!ENTITY Ctr_tabwidthinfo3	"¡Los valores por debajo de 48px causarán problemas en la mayoría de los casos!">
 <!ENTITY Ctr_square_edges	"Esquinas superiores cuadradas">
 <!ENTITY Ctr_tttitlebar		"Título de pestaña en la barra de título de &brandShortName;">
-<!ENTITY Ctr_tabinsertion	"Insertar pestaña asociada tras la actual (about:config >> browser.tabs.insertRelatedAfterCurrent)">
-<!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
-<!ENTITY Ctr_emptytfavico_n	"None">
-<!ENTITY Ctr_emptytfavico_g	"Generic">
+<!ENTITY Ctr_tabinsertion	"Insertar pestaña asociada tras la actual (... >> browser.tabs.insertRelatedAfterCurrent)">
+<!ENTITY Ctr_emptytfavico	"Mostrar favicon (si un sitio no ofrece uno)">
+<!ENTITY Ctr_emptytfavico_n	"Ninguno">
+<!ENTITY Ctr_emptytfavico_g	"Genérico">
 <!ENTITY Ctr_noemptypticon	"Eliminar favicon vacío en pestañas fijadas">
 <!ENTITY Ctr_e10stab_notd	"Pestañas E10s: Eliminar subrayado">
 <!ENTITY Ctr_closetab_0		"Botón de cierre de pestaña">
@@ -71,7 +71,7 @@
 <!ENTITY Ctr_closetab_hfot	"Ocultar para una sola pestaña visible">
 <!ENTITY Ctr_closei_def		"Iconos predeterminados">
 <!ENTITY Ctr_closeonleft	"Posición alternativa en la pestaña">
-<!ENTITY Ctr_close_wwltab	"Cerrar ventana con la última pestaña (about:config >> browser.tabs.closeWindowWithLastTab)">
+<!ENTITY Ctr_close_wwltab	"Cerrar ventana con última pestaña (about:config >> browser.tabs.closeWindowWithLastTab)">
 
 <!ENTITY Ctr_hctpinfotab	"Algunas variantes no funcionan con el complemento 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"El botón en la barra de título no funciona con 'Hide Caption Titlebar Plus'.">
@@ -129,7 +129,7 @@
 <!ENTITY Ctr_wincontrols	"Controles de ventana móviles en pantalla completa">
 <!ENTITY Ctr_oldtoplevimg	"Imágenes del 'dominio de primer nivel': Apariencia clásica">
 <!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
-<!ENTITY Ctr_emptygfavico	"Replace generic favicon">
+<!ENTITY Ctr_emptygfavico	"Reemplazar favicon genérico">
 <!ENTITY Ctr_mstatusbar		"Mostrar panel móvil de la antigua barra de estado">
 <!ENTITY Ctr_mstatusbars4e	"El panel de barra de estado está controlado por 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"El panel de barra de estado está controlado por 'ThePuzzlePiece'">
@@ -152,29 +152,29 @@
 <!ENTITY Ctr_nav_txt_ico1	"Mostrar iconos grandes">
 <!ENTITY Ctr_nav_txt_ico2	"Mostrar iconos y texto">
 <!ENTITY Ctr_nav_txt_ico3	"Mostrar sólo texto">
-<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
+<!ENTITY Ctr_nav_txt_exp	"Atributos clásicos (experimental):">
 <!ENTITY Ctr_iat_notf_vt	"Excluir barras de herramientas verticales">
 <!ENTITY Ctr_cpanelmenus	"Menús tipo panel (botones de Historial, triple-barra, etc.): Vista compacta">
 <!ENTITY Ctr_hidezoomres	"Controles de zoom en la barra de herramientas: Ocultar botón de restablecimiento del zoom">
 <!ENTITY Ctr_alt_newtabp	"Página de nueva pestaña (about:newtab): Apariencia alternativa">
 <!ENTITY Ctr_ctroldsearch	"Menú antiguo del recuadro de búsqueda">
 <!ENTITY Ctr_ctroldsearchc	"Limpiar recuadro de búsqueda después de buscar">
-<!ENTITY Ctr_search_oit		"Open search in new tab (about:config preference)">
-<!ENTITY Ctr_osearch_meoit	"Middle-clicks: search in new 'foreground tab'">
-<!ENTITY Ctr_osearch_dm		"Small dropmarker">
+<!ENTITY Ctr_search_oit		"Abrir búsqueda en una nueva pestaña (about:config >> browser.search.openintab)">
+<!ENTITY Ctr_osearch_meoit	"Clic con el botón central: Busca en una nueva 'pestaña en primer plano'">
+<!ENTITY Ctr_osearch_dm		"Flecha de desplegable pequeña">
 <!ENTITY Ctr_addonmanager	"Administrador de complementos">
 <!ENTITY Ctr_alt_addonsp	"Página 'más información': Apariencia alternativa">
 <!ENTITY Ctr_alt_addonsm	"Apariencia alternativa">
 <!ENTITY Ctr_am_nowarning	"Ocultar advertencias en las listas de complementos">
 <!ENTITY Ctr_am_compact		"Listas de complementos: Vista compacta">
 <!ENTITY Ctr_am_compact2	"Vista compacta +">
-<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
+<!ENTITY Ctr_am_highlight	"Listas de complementos: Resaltar entrada al señalarla">
 <!ENTITY Ctr_addonversion	"Mostrar la versión del complemento">
 <!ENTITY Ctr_xpinstallui	"Antiguo diálogo de instalación (about:config >> xpinstall.customConfirmationUI)">
 <!ENTITY Ctr_bmbutton		"Botón de menú emergente de Marcadores">
 <!ENTITY Ctr_bmbutpanelm	"Estilo de panel para el menú emergente ">
 <!ENTITY Ctr_bmbunsortbm	"Mostrar submenú 'Marcadores no ordenados'">
-<!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
+<!ENTITY Ctr_bmbunsortbm2	"Menú por encima de los marcadores">
 <!ENTITY Ctr_bmbviewbmtb	"Mostrar 'Ver barra de herramientas'">
 <!ENTITY Ctr_bmbnounsort	"Ocultar 'Marcadores no ordenados'">
 <!ENTITY Ctr_bmbutnotext	"Ocultar etiquetas en la barra de marcadores">
@@ -201,7 +201,7 @@
 <!ENTITY Ctr_tab_tf_info2	"¡Las entradas no serán validadas!">
 <!ENTITY Ctr_tabact_t		"seleccionada">
 <!ENTITY Ctr_tabhov_t		"señalada">
-<!ENTITY Ctr_tabnor_t		"predeterminada">
+<!ENTITY Ctr_tabnor_t		"predeterminado">
 <!ENTITY Ctr_tabpen_t		"no cargada">
 <!ENTITY Ctr_tabunr_t		"no leída">
 <!ENTITY Ctr_ntab_t			"nueva pestaña">
@@ -225,11 +225,11 @@
 <!ENTITY Ctr_starinurlinfo	"Suprime el botón dual de marcadores de la barra de herramientas">
 <!ENTITY Ctr_feedinurl		"Botón de suscripción (RSS feed)">
 <!ENTITY Ctr_hideurelstop	"Ocultar botones 'Parar y Recargar'">
-<!ENTITY Ctr_hideurelstop2	"Always show 'go' button">
+<!ENTITY Ctr_hideurelstop2	"Mostrar siempre el botón 'Ir'">
 <!ENTITY Ctr_hideurlgo		"Ocultar botón 'Ir'">
 <!ENTITY Ctr_hideurlsrg		"Ocultar separadores y espacios del botón 'Recargar, Parar e Ir'">
 <!ENTITY Ctr_urlbardropm	"Mover flecha de despliegue a la última posición posible">
-<!ENTITY Ctr_urlbardropm2	"Make dropmarker always visible">
+<!ENTITY Ctr_urlbardropm2	"Hacer siempre visible la flecha de despliegue">
 <!ENTITY Ctr_altreaderico	"Iconos de 'Vista de lectura' alternativos">
 <!ENTITY Ctr_hideprbutton	"Ocultar icono de notificación cuando se bloquee una ventana emergente">
 <!ENTITY Ctr_locsearchbw10	"Reducir altura de la barra de direcciones y el recuadro de búsqueda (experimental)">
@@ -362,6 +362,8 @@
 <!ENTITY Ctr_addon-bar.accesskey		"C">
 <!ENTITY appMenuGettingStarted.label	"Comenzar">
 <!ENTITY goCmd.label					"Ir">
+<!ENTITY Ctr_menu_restart.label			"Restart &brandShortName;">
+<!ENTITY Ctr_restartapp					"'Restart &brandShortName;' in appmenu and filemenu">
 
 <!-- For page context entries. Have to be adjusted for every locale! a-s-r-p-m -->
 <!ENTITY backCmd.accesskey				"n">
